			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: compiling pl-atom.c for single-threaded operatation (Barry J Evans).

  * FIXED: exitPrologThreads() counting problem.

  * FIXED: Syntax error in pl-atom.c

  * FIXED: MT: Problem in the atom-garbage collector reclaiming atoms
    in use by other threads.  Sergey Tikhonov.

  * FIXED: MT: Initial thread has wrong status, causing trouble with
    atom garbage collection.  Sergey Tikhonov.

  * ADDED: reload_library_index/0 and automatic reloading if the set of
    library directories changes and predicates cannot be found.  After
    comments by Tolga Konik.

  * ADDED: plld.exe -dll option to create a DLL with Prolog embedded into it.

  * ADDED/FIXED/MODIFIED: Windows: PL_initialise() can now be passed the
    name of a DLL that has a state attached.  Alan Baljeu.

  * FIXED: int->float conversions reading large integers.  Anjo Anjewierden.

  * MODIFIED: PL_get_chars() and friends always return floats in a format
    that reads as a float.

  * FIXED: atom_number('1.0', X).  Added test-cases.  Anjo Anjewierden.

  * ENHANCED: Make library(gensym) thread-safe.


VERSION 5.1.7 (Feb 02, 2003)
============================

  * FIXED: Don't call cleanup of deterministic foreign predicates after
    an abort.

  * FIXED: Bug #19: documentation and status of numbervars/3.  Richard
    O'Keefe and Lourens van der Meij.

  * FIXED: qsave_program/2: ensure the banner is a defined predicate.

  * FIXED: Bug #18: Initialisation problem for single-threaded version
    caused by the addition below.  Lourens van der Meij.

  * ADDED: Prolog flag emacs_inferior_process, which is set to true
    if SWI-Prolog is running as Emacs inferior process.  After comments
    from Michael Covington.
